--- a/C/ACCA/makefile
+++ b/C/ACCA/makefile
@@ -1,3 +1,3 @@
-acca_run: acca_header.h acca.c clusters.c data.c clusters_unit_test.c main_test.c acca_avgc_unit_test.c
-	gcc -g acca_header.h acca.c clusters.c data.c clusters_unit_test.c data_print.c acca_avgc_unit_test.c main_test.c -Wall -lm -o acca_run 
+acca_run: acca_header.h acca.c clusters.c data.c clusters_unit_test.c acca_avgc_unit_test.c main.c 
+	gcc -g acca_header.h acca.c clusters.c data.c clusters_unit_test.c data_print.c acca_avgc_unit_test.c main.c -Wall -lm -o acca_run 
 
